test/manifests/ebs_pod_example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebs-csi-test
---
kind: StorageClass
apiVersion: storage.k8s.io/v1
metadata:
  name: ebs-storage-class
provisioner: ebs.csi.aws.com
volumeBindingMode: WaitForFirstConsumer
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: ebs-pvc
  namespace: ebs-csi-test
spec:
  accessModes:
    - ReadWriteOnce
  storageClassName: ebs-storage-class
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: Pod
metadata:
  namespace: ebs-csi-test
  name: ebs-app
spec:
  containers:
  - name: ebs-app
    image: httpd:2.4
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo $(date) >> /mount/log.txt; sleep 10; done"]
    volumeMounts:
    - name: ebs-volume
      mountPath: /mount/
  volumes:
  - name: ebs-volume
    persistentVolumeClaim:
      claimName: ebs-pvc
