test/manifests/efs_storageclass_example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: efs-csi-test
---
kind: StorageClass
apiVersion: storage.k8s.io/v1
metadata:
  name: efs-storage-class
provisioner: efs.csi.aws.com
parameters:
  provisioningMode: efs-ap
  fileSystemId: fs-123456
  directoryPerms: "700"
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: efs-pvc
  namespace: efs-csi-test
spec:
  accessModes:
    - ReadWriteMany
  storageClassName: efs-storage-class
  resources:
    requests:
      storage: 8Gi
---
apiVersion: v1
kind: Pod
metadata:
  name: efs-app
  namespace: efs-csi-test
spec:
  containers:
    - name: app
      image: httpd:2.4
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo $(date) >> /mount/log.txt; sleep 10; done"]
      volumeMounts:
        - name: efs-storage
          mountPath: /mount
  volumes:
    - name: efs-storage
      persistentVolumeClaim:
        claimName: efs-pvc
