test/manifests/hpa_example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hpa-test
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-service
  namespace: hpa-test
spec:
  selector:
    app.kubernetes.io/name : hpa-app
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: hpa-test
  name: hpa-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hpa-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hpa-app
    spec:
      containers:
      - image: httpd:2.4
        imagePullPolicy: Always
        name: app-httpd
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 100m
---
apiVersion: autoscaling/v1
kind: HorizontalPodAutoscaler
metadata:
  name: hpa-deployment
  namespace: hpa-test
spec:
  maxReplicas: 10
  minReplicas: 1
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: hpa-deployment
  targetCPUUtilizationPercentage: 50
