test/manifests/network_policy_example.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: policy-test
spec:
  podSelector:
    matchLabels: {}
