test/manifests/secrets_providerdeployment_example.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-secrets-manager-test
---
apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
kind: SecretProviderClass
metadata:
  name: httpd-deployment-aws-secrets-store
  namespace: aws-secrets-manager-test
spec:
  provider: aws
  parameters:
    objects: |
        - objectName: "httpd-secrets-store"
          objectType: "secretsmanager"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  namespace: aws-secrets-manager-test
  labels:
    app: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      serviceAccountName: httpd-deployment-sa
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "httpd-deployment-aws-secrets-store"
      containers:
      - name: httpd-deployment
        image: httpd
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store
          mountPath: "/mount/secrets-store"
          readOnly: true
